# spanner

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
qrcode_spanner/: __init__.py  __main__.py  spanner.py
spnr/: __init__.py  __main__.py  cli.py  code.py  hash.py  json.py  qr.py
src/spnr/: __init__.py  cli.py  qr.py  table.py  time.py
