[project]
name = "spnr"
version = "0.2.2"
description = "A command line toolset"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
authors = [
    { name = "sea", email = "simpleslight@icloud.com" }
]
urls = { "Homepage" = "https://github.com/suransea/spanner" }
dependencies = [
    "qrcode",
    "pillow",
    "opencv-python",
    "pyscreenshot",
    "pyzbar",
    "pyperclip"
]

[project.scripts]
spnr = "spnr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spnr"]
